<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@color/button_gery"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/id_tab_matrix"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/matrix_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matrix"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_polynomial"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/polynomial_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/polynomial"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_help"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/help_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>